Updated to ExtentReport 5 & removed StrictAware interface